[Add] Add user authentication

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,9 @@
 ja:
   activerecord:
     attributes:
+      user: ユーザー名
+      password: パスワード
+      password_confirmation: パスワード（確認）
       board:
         name: 名前
         title: タイトル
